--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 <body>
 
-<h1>Lauren Rutherford</h1>
+  <header>
+    <nav>
+    </nav>
+  </header>
 
-<h2 id="welcome-header">Hello,</h2>
-<h2>It's nice to meet you!</h2>
-<p class="big-paragraph">I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
+  <div class="container">
+    <h1>Lauren Rutherford</h1>
 
-Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
+    <h2 id="welcome-header">Hello,</h2>
+    <h2>It's nice to meet you!</h2>
+    <p class="big-paragraph">I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
 
-This semester I'm recoding this website from scratch (my senior honor's project), so please use the teal buttons to learn more about me.</p>
+    Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
 
-<header>
-  <nav>
-  </nav>
-</header>
+    This semester I'm recoding this website from scratch (my senior honor's project), so please use the teal buttons to learn more about me.</p>
+  </div>
+
 
 </body>
 </html>
