--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../Personal-Portfolio/css/portfolio.css" rel="stylesheet" type="text/css">
+  <link href="/Personal-Portfolio/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Fauna+One|Open+Sans:400,400italic,300italic,300' rel='stylesheet' type='text/css'>
 </head>
 
