--- a/index.html
+++ b/index.html
@@ -8,29 +8,62 @@
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/Personal-Portfolio/css/portfolio.css" rel="stylesheet" type="text/css">
+  <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Fauna+One|Open+Sans:400,400italic,300italic,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
   <header>
-    <nav>
+    <div>
+      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed">
+    </div>
+
+    <div class="container-fluid">
+    <nav class="primary-nav">
+      <ul class="row">
+        <li class="col-xs-3"></li>
+        <li class="col-xs-1"><a href="index.html">Home</a></li>
+        <li class="col-xs-1"><a href="about.html">About</a></li>
+        <li class="col-xs-1"><a href="work.html">Work</a></li>
+        <li class="col-xs-1"><a href="events.html">Events</a></li>
+        <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
+        <li class="col-xs-1"><a href="contact.html">Contact</a></li>
+        <li class="col-xs-3"></li>
+      </ul>
     </nav>
+    </div>
+
   </header>
 
-  <div class="container">
-    <h1>Lauren Rutherford</h1>
 
-    <h2 id="welcome-header">Hello,</h2>
-    <h2>It's nice to meet you!</h2>
-    <p class="big-paragraph">I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
 
-    Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
+  <div class="row">
 
-    This semester I'm recoding this website from scratch (my senior honor's project), so please use the teal buttons to learn more about me.</p>
+    <ul>
+      <li class="col-xs-2"></li>
+    </ul>
+
+    <div class="col-xs-4">
+      <img src="assets/images/headshot-placeholder.jpg" alt="lauren rutherford headshot placeholder">
+    </div>
+
+
+    <div class="col-xs-4">
+      <h2>Hello,</h2>
+      <h2>It's nice to meet you!</h2>
+      <p>I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
+
+      Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
+
+      This semester I'm recoding this website from scratch (my senior honor's project), so please use the teal buttons to learn more about me.</p>
+    </div>
+
+    <ul>
+      <li class="col-xs-2"></li>
+    </ul>
+
   </div>
-
 
 </body>
 </html>
