--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Lauren Rutherford Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Fauna+One|Open+Sans:400,400italic,300italic,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -23,12 +23,12 @@
     <nav class="primary-nav">
       <ul class="row">
         <li class="col-xs-3"></li>
-        <li class="col-xs-1"><a href="index.html">Home</a></li>
+        <li class="col-xs-1"><a href="index.html" id="selected-page">Home</a></li>
         <li class="col-xs-1"><a href="about.html">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
         <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
-        <li class="col-xs-1"><a href="contact.html">Contact</a></li>
+        <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
     </nav>
@@ -50,8 +50,8 @@
 
 
     <div class="col-xs-4">
-      <h2>Hello,</h2>
-      <h2>It's nice to meet you!</h2>
+      <h2>FAST FACTS:</h2>
+      <h3>Headline three sample</h3>
       <p>I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
 
       Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
