--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <ul class="row">
         <li class="col-xs-3"></li>
         <li class="col-xs-1"><a href="index.html" id="selected-page">Home</a></li>
-        <li class="col-xs-1"><a href="about.html">About</a></li>
-        <li class="col-xs-1"><a href="work.html">Work</a></li>
-        <li class="col-xs-1"><a href="events.html">Events</a></li>
+        <li class="col-xs-1"><a href="about/index.html">About</a></li>
+        <li class="col-xs-1"><a href="work/index.html">Work</a></li>
+        <li class="col-xs-1"><a href="events/index.html">Events</a></li>
         <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
-        <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
+        <li class="col-xs-1" id="last-nav"><a href="contact/index.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
     </nav>
