--- a/work/index.html
+++ b/work/index.html
@@ -8,36 +8,30 @@
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/Personal-Portfolio/css/portfolio.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Fauna+One|Open+Sans:400,400italic,300italic,300' rel='stylesheet' type='text/css'>
+  <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
   <header>
     <div>
-      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type">
+      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed">
     </div>
 
     <div class="container-fluid">
     <nav class="primary-nav">
       <ul class="row">
-        <li class="col-xs-2"><a href="index.html">Home</a></li>
-        <li class="col-xs-2"><a href="about.html">About</a></li>
-        <li class="col-xs-2"><a href="work.html">Work</a></li>
-        <li class="col-xs-2"><a href="events.html">Events</a></li>
-        <li class="col-xs-2"><a href="travel.html">Travel</a></li>
-        <li class="col-xs-2"><a href="MEDIUM LINK HERE">Blog</a></li>
-        <li class="col-xs-2"><a href="contact.html">Contact</a></li>
+        <li class="col-xs-3"></li>
+        <li class="col-xs-1"><a href="personal-portfolio/index.html">Home</a></li>
+        <li class="col-xs-1"><a href="about/index.html">About</a></li>
+        <li class="col-xs-1"><a href="work/index.html" id="selected-page">Work</a></li>
+        <li class="col-xs-1"><a href="events/index.html">Events</a></li>
+        <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
+        <li class="col-xs-1" id="last-nav"><a href="contact/index.html">Contact</a></li>
+        <li class="col-xs-3"></li>
       </ul>
     </nav>
     </div>
 
   </header>
-
-  <div class="container">
-  </div>
-
-
-</body>
-</html>
