Edited nav and page titles

--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-  <title>Home</title>
+  <title>Events</title>
   <meta charset="utf-8">
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
@@ -24,11 +24,11 @@
       <ul class="row">
         <li class="col-xs-3"></li>
         <li class="col-xs-1"><a href="index.html">Home</a></li>
-        <li class="col-xs-1"><a href="about/index.html">About</a></li>
-        <li class="col-xs-1"><a href="work/index.html">Work</a></li>
-        <li class="col-xs-1"><a href="events/index.html" id="selected-page">Events</a></li>
+        <li class="col-xs-1"><a href="about.html">About</a></li>
+        <li class="col-xs-1"><a href="work.html">Work</a></li>
+        <li class="col-xs-1"><a href="events.html" id="selected-page">Events</a></li>
         <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
-        <li class="col-xs-1" id="last-nav"><a href="contact/index.html">Contact</a></li>
+        <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
     </nav>
