--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <nav class="primary-nav">
       <ul class="row">
         <li class="col-xs-3"></li>
-        <li class="col-xs-1"><a href="index.html">Home</a></li>
-        <li class="col-xs-1"><a href="about.html" id="selected-page">About</a></li>
+        <li class="col-xs-1"><a href="index.html" id="selected-page">Home</a></li>
+        <li class="col-xs-1"><a href="about.html">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
         <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
