--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-  <title>Home</title>
+  <title>Work</title>
   <meta charset="utf-8">
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
@@ -23,12 +23,12 @@
     <nav class="primary-nav">
       <ul class="row">
         <li class="col-xs-3"></li>
-        <li class="col-xs-1"><a href="personal-portfolio/index.html">Home</a></li>
-        <li class="col-xs-1"><a href="about/index.html">About</a></li>
-        <li class="col-xs-1"><a href="work/index.html" id="selected-page">Work</a></li>
-        <li class="col-xs-1"><a href="events/index.html">Events</a></li>
+        <li class="col-xs-1"><a href="index.html">Home</a></li>
+        <li class="col-xs-1"><a href="about.html">About</a></li>
+        <li class="col-xs-1"><a href="work.html" id="selected-page">Work</a></li>
+        <li class="col-xs-1"><a href="events.html">Events</a></li>
         <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
-        <li class="col-xs-1" id="last-nav"><a href="contact/index.html">Contact</a></li>
+        <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
     </nav>
