--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <li class="col-xs-1"><a href="about.html" id="selected-page">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
-        <li class="col-xs-1"><a href="MEDIUM LINK HERE">Blog</a></li>
+        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07">Blog</a></li>
         <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
