--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
         <li class="col-xs-1"><a href="about.html">About</a></li>
         <li class="col-xs-1"><a href="work.html" id="selected-page">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
-        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07">Blog</a></li>
+        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07" target="_blank">Blog</a></li>
         <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
