--- a/work.html
+++ b/work.html
@@ -35,3 +35,114 @@
     </div>
 
   </header>
+
+  <div class="container-fluid center-block">
+    <h1>Writing</h1>
+    <div>
+    <div>
+      <ul class="row">
+        <li class="col-xs-3">
+          <img src="assets/images/feast-logo.png" alt="Feast Magazine logo">
+        </li>
+        <li class="col-xs-5">
+          <p class="publication-name"><em>Feast</em> Magazine</p>
+          <p class="title-and-dates">Freelance Writer, August 2015 - Present</p>
+        </li>
+        <li class="col-xs-4">
+        </li>
+      </div>
+
+      <div>
+        <p>I answered Feast’s call for writers covering the food and drink scene in Mid-Missouri. Feast is a large-format print magazine that is a source for all things food scene in the state of Missouri. I primarily write for FeastMagazine.com’s “The Feed” section. Keeping a careful eye on the happenings in Columbia, I pitch, report, research, write and fact-check stories on the city’s best tastes. On occasion, I take the photos for my stories.</p>
+
+        <p>CLIPS</p>
+      </div>
+    </div>
+
+    <div>
+      <div>
+        <ul class="row">
+          <li class="col-xs-3">
+            <img src="assets/images/kcmag-logo.png" alt="Feast Magazine logo">
+          </li>
+          <li class="col-xs-5">
+            <p class="publication-name"><em>KC</em> Magazine</p>
+            <p class="title-and-dates">Freelance Writer, August 2015 - Present</p>
+            <p class="title-and-dates">Editorial Intern, May-August 2015</p>
+          </li>
+          <li class="col-xs-4">
+          </li>
+      </div>
+
+      <div>
+          <p>In the summer of 2015, I lived in Kansas City and wrote for ThisisKC.com, KC magazine’s online outlet. I produced an average of three to four stories a week. As a freelance writer, I pitch, report, research, write, fact-check and gather photos for pieces Kansas City culture.</p>
+
+          <p>CLIPS</p>
+      </div>
+    </div>
+
+    <div>
+      TulsaPeople Magazine
+      Freelance Writer, August 2014 - Present
+      Editorial Intern, May-August 2013
+      Editorial Intern, December 2013 - January 2014
+
+      I held my first magazine internship during summer 2013. I primarily fact-checked and proofread stories for the print publication and wrote weekly for The Weekender blog. During my sophomore winter break, I returned to those duties. Now as a freelance writer, I report and write the assignments given to me. I primarily write Q-and-A’s with Tulsa’s coolest crowd.
+
+      CLIPS
+    </div>
+
+    <div>
+      Society of American Travel Writers
+      Intern, October 2015
+
+      I attended the SATW ReInvention Convention in Las Vegas as a conference intern. As an intern, I wrote event coverage and trend pieces for the daily conference newsletter that was distributed to the organization’s members via email. I also curated the SATW Instagram during the week and gained dozens of new followers on the social media site.
+    </div>
+
+    <div>
+      Vox Magazine
+      Contributing Writer, May-August 2015
+
+      After working as a digital and print editor in the spring, I continued with Vox as a contributing writer. I pitched and wrote blogs and Q-&-A’s as well as department pieces that were assigned to me. My biggest success of the summer was pitching, reporting and writing a over 2,000 word feature about the role social media plays in spreading awareness and raising money for those who are terminally ill. The story centered on Columbia native Bryson, a 5-year-old with a DIPG tumor, and his Facebook page with over 24,000 likes.
+
+      CLIPS
+    </div>
+
+    <div>
+      Columbia Missourian
+      Reporter, July-August 2014
+
+      I spent one month as a student reporter for the Columbia Missourian, a student-powered and faculty-led daily publication. I wrote and fact-checked stories on all topics every day, and I produced two feature-length pieces that ran above the fold on the front page. During general assignment shifts, I wrote obituaries (or as the Missourian calls Life Stories) and quick briefs. Throughout my time there, I had the opportunity to social media as a storytelling method. I even broke the news of a councilman’s death after finding a tip on Twitter.
+
+      CLIPS
+    </div>
+
+    <div>
+      The Maneater Student Newspaper
+      Opinion and Outreach Editor, December 2013 - May 2014
+
+      I researched and wrote the weekly editorials that represented the editorial board’s opinion as a whole. My other duties included managing The Maneater’s social media accounts and editing a handful of columns weekly.
+
+      CLIPS
+    </div>
+
+    </div>
+  </div>
+
+  <div>
+    <h1>Social Media</h1>
+    <div>
+    </div>
+  </div>
+
+  <div>
+    <h1>Editing</h1>
+    <div>
+    </div>
+  </div>
+
+  <div>
+    <h1>Digital Design</h1>
+    <div>
+    </div>
+  </div>
