--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
       <div>
         <ul class="row">
           <li class="col-xs-3">
-            <img src="assets/images/kcmag-logo.png" alt="Feast Magazine logo">
+            <img src="assets/images/kcmag-logo.png" alt="KC Magazine logo">
           </li>
           <li class="col-xs-5">
             <p class="publication-name"><em>KC</em> Magazine</p>
@@ -82,67 +82,216 @@
     </div>
 
     <div>
-      TulsaPeople Magazine
-      Freelance Writer, August 2014 - Present
-      Editorial Intern, May-August 2013
-      Editorial Intern, December 2013 - January 2014
+      <div>
+        <ul class="row">
+          <li class="col-xs-3">
+            <img src="assets/images/feast-logo.png" alt="TulsaPeople Magazine logo">
+          </li>
+          <li class="col-xs-5">
+            <p class="publication-name"><em>TulsaPeople</em> Magazine</p>
+            <p class="title-and-dates">Freelance Writer, August 2014 - Present</p>
+            <p class="title-and-dates">Editorial Intern, May-August 2013</p>
+            <p class="title-and-dates">Editorial Intern, December 2013 - January 2014</p>
+          </li>
+          <li class="col-xs-4">
+          </li>
+        </div>
 
-      I held my first magazine internship during summer 2013. I primarily fact-checked and proofread stories for the print publication and wrote weekly for The Weekender blog. During my sophomore winter break, I returned to those duties. Now as a freelance writer, I report and write the assignments given to me. I primarily write Q-and-A’s with Tulsa’s coolest crowd.
+        <div>
+          <p>I held my first magazine internship during summer 2013. I primarily fact-checked and proofread stories for the print publication and wrote weekly for The Weekender blog. During my sophomore winter break, I returned to those duties. Now as a freelance writer, I report and write the assignments given to me. I primarily write Q-and-A’s with Tulsa’s coolest crowd.</p>
 
-      CLIPS
-    </div>
-
-    <div>
-      Society of American Travel Writers
-      Intern, October 2015
-
-      I attended the SATW ReInvention Convention in Las Vegas as a conference intern. As an intern, I wrote event coverage and trend pieces for the daily conference newsletter that was distributed to the organization’s members via email. I also curated the SATW Instagram during the week and gained dozens of new followers on the social media site.
-    </div>
-
-    <div>
-      Vox Magazine
-      Contributing Writer, May-August 2015
-
-      After working as a digital and print editor in the spring, I continued with Vox as a contributing writer. I pitched and wrote blogs and Q-&-A’s as well as department pieces that were assigned to me. My biggest success of the summer was pitching, reporting and writing a over 2,000 word feature about the role social media plays in spreading awareness and raising money for those who are terminally ill. The story centered on Columbia native Bryson, a 5-year-old with a DIPG tumor, and his Facebook page with over 24,000 likes.
-
-      CLIPS
-    </div>
+          <p>CLIPS</p>
+        </div>
+      </div>
 
     <div>
-      Columbia Missourian
-      Reporter, July-August 2014
+      <div>
+        <ul class="row">
+          <li class="col-xs-3">
+            <img src="assets/images/feast-logo.png" alt="SATW logo">
+          </li>
+          <li class="col-xs-5">
+            <p class="publication-name">Society of American Travel Writers</p>
+            <p class="title-and-dates">  Intern, October 2015</p>
+          </li>
+          <li class="col-xs-4">
+          </li>
+        </div>
 
-      I spent one month as a student reporter for the Columbia Missourian, a student-powered and faculty-led daily publication. I wrote and fact-checked stories on all topics every day, and I produced two feature-length pieces that ran above the fold on the front page. During general assignment shifts, I wrote obituaries (or as the Missourian calls Life Stories) and quick briefs. Throughout my time there, I had the opportunity to social media as a storytelling method. I even broke the news of a councilman’s death after finding a tip on Twitter.
+        <div>
+          <p>I attended the SATW ReInvention Convention in Las Vegas as a conference intern. As an intern, I wrote event coverage and trend pieces for the daily conference newsletter that was distributed to the organization’s members via email. I also curated the SATW Instagram during the week and gained dozens of new followers on the social media site.</p>
+          <p>CLIPS</p>
+        </div>
+      </div>
 
-      CLIPS
-    </div>
+      <div>
+        <div>
+          <ul class="row">
+            <li class="col-xs-3">
+              <img src="assets/images/feast-logo.png" alt="Vox Magazine logo">
+            </li>
+            <li class="col-xs-5">
+              <p class="publication-name"><em>Vox</em> Magazine</p>
+              <p class="title-and-dates">Contributing Writer, May-August 2015</p>
+            </li>
+            <li class="col-xs-4">
+            </li>
+          </div>
 
-    <div>
-      The Maneater Student Newspaper
-      Opinion and Outreach Editor, December 2013 - May 2014
+          <div>
+            <p>After working as a digital and print editor in the spring, I continued with Vox as a contributing writer. I pitched and wrote blogs and Q-and-A’s as well as department pieces that were assigned to me. My biggest success of the summer was pitching, reporting and writing a over 2,000 word feature about the role social media plays in spreading awareness and raising money for those who are terminally ill. The story centered on Columbia native Bryson, a 5-year-old with a DIPG tumor, and his Facebook page with over 24,000 likes.</p>
 
-      I researched and wrote the weekly editorials that represented the editorial board’s opinion as a whole. My other duties included managing The Maneater’s social media accounts and editing a handful of columns weekly.
+            <p>CLIPS</p>
+          </div>
+        </div>
 
-      CLIPS
-    </div>
+        <div>
+          <div>
+            <ul class="row">
+              <li class="col-xs-3">
+                <img src="assets/images/feast-logo.png" alt="Columbia Missourian logo">
+              </li>
+              <li class="col-xs-5">
+                <p class="publication-name"><em>Columbia Missourian</em></p>
+                <p class="title-and-dates">Reporter, July-August 2014</p>
+              </li>
+              <li class="col-xs-4">
+              </li>
+            </div>
 
-    </div>
-  </div>
+            <div>
+              <p>I spent one month as a student reporter for the Columbia Missourian, a student-powered and faculty-led daily publication. I wrote and fact-checked stories on all topics every day, and I produced two feature-length pieces that ran above the fold on the front page. During general assignment shifts, I wrote obituaries (or as the Missourian calls Life Stories) and quick briefs. Throughout my time there, I had the opportunity to social media as a storytelling method. I even broke the news of a councilman’s death after finding a tip on Twitter.</p>
 
-  <div>
+              <p>CLIPS</p>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <ul class="row">
+                <li class="col-xs-3">
+                  <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                </li>
+                <li class="col-xs-5">
+                  <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
+                  <p class="title-and-dates">Opinion and Outreach Editor, December 2013 - May 2014</p>
+                </li>
+                <li class="col-xs-4">
+                </li>
+              </div>
+
+              <div>
+                <p>I researched and wrote the weekly editorials that represented the editorial board’s opinion as a whole. My other duties included managing The Maneater’s social media accounts and editing a handful of columns weekly.</p>
+
+                <p>CLIPS</p>
+              </div>
+            </div>
+  </div> /end writing div */
+
+  <div class="container-fluid center-block">
     <h1>Social Media</h1>
-    <div>
-    </div>
-  </div>
 
-  <div>
-    <h1>Editing</h1>
-    <div>
-    </div>
-  </div>
+      <div>
+        <div>
+          <ul class="row">
+            <li class="col-xs-3">
+              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+            </li>
+            <li class="col-xs-5">
+              <p class="publication-name">Society of American Travel Writers</p>
+              <p class="title-and-dates">Conference Intern, October 2015</p>
+            </li>
+            <li class="col-xs-4">
+            </li>
+          </div>
 
-  <div>
-    <h1>Digital Design</h1>
-    <div>
-    </div>
-  </div>
+          <div>
+            <p>I attended the SATW ReInvention Convention in Las Vegas as a conference intern. As an intern, I curated the SATW Instagram during the week and gained dozens of new followers on the social media site. I also wrote event coverage and trend pieces for the daily conference newsletter that was distributed to the organization’s members via email.</p>
+
+            <p>CLIPS//STORIFY</p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <ul class="row">
+              <li class="col-xs-3">
+                <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+              </li>
+              <li class="col-xs-5">
+                <p class="publication-name"><em>Vox</em>Magazine</p>
+                <p class="title-and-dates">Digital Editor, January-May 2015</p>
+              </li>
+              <li class="col-xs-4">
+              </li>
+            </div>
+
+            <div>
+              <p>As a digital editor, I helped run Vox’s Facebook, Twitter, Pinterest and Instagram. Through Google Analytics, I helped our digital team to see what gained traction online.  I live social posted and blogged Columbia’s documentary film festival, True/False, and live tweeted events, such as evenings with both RJ Mitte and Common.</p>
+
+              <p>On a weekly basis, I utilized tools such as Storify, Stellar, ThingLink, PlayBuzz, Timeline JS and more to enhance and produce stories on voxmagazine.com. I also pitched, wrote and designed web exclusive stories and blogged weekly for VoxTalk.</p>
+
+              <p>CLIPS//STORIFY</p>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <ul class="row">
+                <li class="col-xs-3">
+                  <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                </li>
+                <li class="col-xs-5">
+                  <p class="publication-name"><em>The Maneater</em>Student Newspaper</p>
+                  <p class="title-and-dates">Managing editor, May-October 2014</p>
+                  <p class="title-and-dates">Opinion/Outreach Editor, January-May 2014</p>
+                  <p class="title-and-dates">Assistant Editor, August 2013-January 2014</p>
+                </li>
+                <li class="col-xs-4">
+                </li>
+              </div>
+
+              <div>
+                <p>My quest to revamp The Maneater’s social media presence began after attending the Associated Collegiate Press conference in New Orleans in October 2013. I decided that our publication could do a lot better. Long story short, I invented a planning system and introduced our newsroom to Hootsuite. I most formally took on the social media editor role as Outreach Editor.</p>
+
+                <p>In spring 2014, my consistent and systematic posting to our accounts gained us NUMBER new Facebook likes and NUMBER new Twitter followers. I helped to implement social media as a method of storytelling by using Storify and posting embeds.</p>
+
+                <p>As I transitioned to Managing Editor, I didn’t feel my system was ready to pass along to others. I honed the system, and in October upon my resignation, created a social media editor position. I trained two staff members to run The Maneater’s accounts, and I’m proud to say it’s a position that the staff maintains today. Just last spring, The Maneater Twitter account passed 10,000 followers and earned a verified check mark.</p>
+
+                <p>CLIPS//STORIFY</p>
+              </div>
+            </div>
+    </div> /end social div/
+
+    <div class="container-fluid center-block">
+      <h1>Editing</h1>
+      <div>
+      </div>
+    </div> /end editing div/
+
+    <div class="container-fluid center-block">
+      <h1>Digital Design</h1>
+      <div>
+        <div>
+          <ul class="row">
+            <li class="col-xs-3">
+              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+            </li>
+            <li class="col-xs-5">
+              <p class="publication-name"><em>Vox</em>Magazine</p>
+              <p class="title-and-dates">Digital Editor, January-May 2015</p>
+            </li>
+            <li class="col-xs-4">
+            </li>
+          </div>
+
+          <div>
+
+            <p>  On a weekly basis, I utilized tools such as Storify, Stellar, ThingLink, PlayBuzz, Timeline JS and more to enhance and produce stories on voxmagazine.com. I also pitched, wrote and designed web exclusive stories and blogged weekly for VoxTalk.</p>
+
+            <p>  As a digital editor, I helped run Vox’s Facebook, Twitter, Pinterest and Instagram. Through Google Analytics, I helped our digital team to see what gained traction online.  I live social posted and blogged Columbia’s documentary film festival, True/False, and live tweeted events, such as evenings with both RJ Mitte and Common.</p>
+
+            <p>CLIPS//STORIFY</p>
+          </div>
+        </div>
+    </div> /end digital div/
