Adding to the work page

--- a/work.html
+++ b/work.html
@@ -219,7 +219,7 @@
                 <img src="assets/images/feast-logo.png" alt="The Maneater logo">
               </li>
               <li class="col-xs-5">
-                <p class="publication-name"><em>Vox</em>Magazine</p>
+                <p class="publication-name"><em>Vox</em> Magazine</p>
                 <p class="title-and-dates">Digital Editor, January-May 2015</p>
               </li>
               <li class="col-xs-4">
@@ -242,7 +242,7 @@
                   <img src="assets/images/feast-logo.png" alt="The Maneater logo">
                 </li>
                 <li class="col-xs-5">
-                  <p class="publication-name"><em>The Maneater</em>Student Newspaper</p>
+                  <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
                   <p class="title-and-dates">Managing editor, May-October 2014</p>
                   <p class="title-and-dates">Opinion/Outreach Editor, January-May 2014</p>
                   <p class="title-and-dates">Assistant Editor, August 2013-January 2014</p>
@@ -266,7 +266,58 @@
     <div class="container-fluid center-block">
       <h1>Editing</h1>
       <div>
-      </div>
+        <div>
+          <ul class="row">
+            <li class="col-xs-3">
+              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+            </li>
+            <li class="col-xs-5">
+              <p class="publication-name"><em>Vox</em> Magazine</p>
+              <p class="title-and-dates">Scene Editor, January-May 2015</p>
+            </li>
+            <li class="col-xs-4">
+            </li>
+          </div>
+
+          <div>
+
+            <p>I pitched, edited and fact-checked for the weekly print edition. To make these stories as robust as possible, I worked with the digital team to craft its online presence. On production nights, I copy edited galleys, made small design changes and wrote headlines, decks, table of contents blurbs and cover lines. I worked with a team of editors and writers to accomplish this.</p>
+
+            <p>  As a digital editor, I helped run Vox’s Facebook, Twitter, Pinterest and Instagram. Through Google Analytics, I helped our digital team to see what gained traction online.  I live social posted and blogged Columbia’s documentary film festival, True/False, and live tweeted events, such as evenings with both RJ Mitte and Common.</p>
+
+            <p>CLIPS//STORIFY</p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <ul class="row">
+              <li class="col-xs-3">
+                <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+              </li>
+              <li class="col-xs-5">
+                <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
+                <p class="title-and-dates">Managing Editor, May-October 2014</p>
+                <p class="title-and-dates">Opinion/Outreach Editor, January-May 2014</p>
+                <p class="title-and-dates">Assistant Editor, August 2013-January 2014</p>
+              </li>
+              <li class="col-xs-4">
+              </li>
+            </div>
+
+            <div>
+
+              <p>Managing Editor at The Maneater is a position elected by the entire staff of photographers, writers, editors and designers. As Managing Editor, I edited all content that went to print as well as some online exclusive content. I managed our staff, often solving problems and engaging in conflict resolution, and payroll. Every week I organized and helped lead a workshop for our staff. In the transition from Outreach/Opinion editor to Managing Editor, I kept my social media editor role and continued to grow the publication’s presence online. If you’d like to know more about why I had to leave this position earlier than expected, please ask.</p>
+
+              <p>As Opinion/Outreach Editor, I selected a team of columnists, edited their columns weekly, decided which columns would appear in print and laid out the pages. My other duties included managing The Maneater’s social media accounts and writing the weekly editorial.</p>
+
+              <p>As Assistant Editor, I edited content as needed, complied the weekly calendar and published calendar posts on social accounts.</p>
+
+              <p>CLIPS//STORIFY</p>
+            </div>
+          </div>
+
+
     </div> /end editing div/
 
     <div class="container-fluid center-block">
@@ -278,7 +329,7 @@
               <img src="assets/images/feast-logo.png" alt="The Maneater logo">
             </li>
             <li class="col-xs-5">
-              <p class="publication-name"><em>Vox</em>Magazine</p>
+              <p class="publication-name"><em>Vox</em> Magazine</p>
               <p class="title-and-dates">Digital Editor, January-May 2015</p>
             </li>
             <li class="col-xs-4">
