corrected the links

--- a/work.html
+++ b/work.html
@@ -85,7 +85,7 @@
       <div>
         <ul class="row">
           <li class="col-xs-3">
-            <img src="assets/images/feast-logo.png" alt="TulsaPeople Magazine logo">
+            <img src="assets/images/tulsapeople-logo.png" alt="TulsaPeople Magazine logo">
           </li>
           <li class="col-xs-5">
             <p class="publication-name"><em>TulsaPeople</em> Magazine</p>
@@ -108,7 +108,7 @@
       <div>
         <ul class="row">
           <li class="col-xs-3">
-            <img src="assets/images/feast-logo.png" alt="SATW logo">
+            <img src="assets/images/satw-logo.png" alt="SATW logo">
           </li>
           <li class="col-xs-5">
             <p class="publication-name">Society of American Travel Writers</p>
@@ -128,7 +128,7 @@
         <div>
           <ul class="row">
             <li class="col-xs-3">
-              <img src="assets/images/feast-logo.png" alt="Vox Magazine logo">
+              <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
             </li>
             <li class="col-xs-5">
               <p class="publication-name"><em>Vox</em> Magazine</p>
@@ -149,7 +149,7 @@
           <div>
             <ul class="row">
               <li class="col-xs-3">
-                <img src="assets/images/feast-logo.png" alt="Columbia Missourian logo">
+                <img src="assets/images/missourian-logo.png" alt="Columbia Missourian logo">
               </li>
               <li class="col-xs-5">
                 <p class="publication-name"><em>Columbia Missourian</em></p>
@@ -170,7 +170,7 @@
             <div>
               <ul class="row">
                 <li class="col-xs-3">
-                  <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                  <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
                 </li>
                 <li class="col-xs-5">
                   <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
@@ -195,7 +195,7 @@
         <div>
           <ul class="row">
             <li class="col-xs-3">
-              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+              <img src="assets/images/satw-logo.png" alt="Society of American Travel Writers logo">
             </li>
             <li class="col-xs-5">
               <p class="publication-name">Society of American Travel Writers</p>
@@ -216,7 +216,7 @@
           <div>
             <ul class="row">
               <li class="col-xs-3">
-                <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
               </li>
               <li class="col-xs-5">
                 <p class="publication-name"><em>Vox</em> Magazine</p>
@@ -239,7 +239,7 @@
             <div>
               <ul class="row">
                 <li class="col-xs-3">
-                  <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                  <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
                 </li>
                 <li class="col-xs-5">
                   <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
@@ -269,7 +269,7 @@
         <div>
           <ul class="row">
             <li class="col-xs-3">
-              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+              <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
             </li>
             <li class="col-xs-5">
               <p class="publication-name"><em>Vox</em> Magazine</p>
@@ -293,7 +293,7 @@
           <div>
             <ul class="row">
               <li class="col-xs-3">
-                <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+                <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
               </li>
               <li class="col-xs-5">
                 <p class="publication-name"><em>The Maneater</em> Student Newspaper</p>
@@ -326,7 +326,7 @@
         <div>
           <ul class="row">
             <li class="col-xs-3">
-              <img src="assets/images/feast-logo.png" alt="The Maneater logo">
+              <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
             </li>
             <li class="col-xs-5">
               <p class="publication-name"><em>Vox</em> Magazine</p>
