Linked the header image to the home page

--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
 
   <header>
     <div>
-      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed">
+      <a href="index.html"><img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed"></a>
     </div>
 
     <div class="container-fluid">
@@ -33,5 +33,22 @@
       </ul>
     </nav>
     </div>
-
   </header>
+
+  <div>
+    <ul class="row">
+      <li class="col-xs-3"><img src="assets/images/JaneGoodall-23.jpg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
+      <li class="col-xs-6"><img src="assets/images/Photo Sep 18, 12 36 52 AM.jpeg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
+      <li class="col-xs-3"><img src="assets/images/DSC_5576.jpg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
+    </ul>
+  </div>
+
+<div class="container-fluid center-block">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porttitor nisl vel euismod tempor. Pellentesque fermentum vestibulum ligula, in placerat eros vestibulum quis. Donec venenatis id augue vitae semper. Cras vel nibh pretium purus gravida fringilla. Morbi lobortis blandit risus at viverra. In non tortor ut arcu efficitur convallis. Donec eget lorem non massa commodo feugiat.</p>
+
+  <p>Vestibulum rhoncus tellus at posuere egestas. Vestibulum fringilla, nibh vitae pretium imperdiet, felis magna pharetra neque, ac blandit augue sem at odio. Sed et mi tristique turpis congue aliquam eget sed arcu. Praesent lorem ex, elementum in vestibulum non, aliquet et ipsum. Etiam venenatis elementum urna ut tincidunt. Sed metus enim, tempor nec dolor nec, dictum viverra lorem. Sed eget augue sapien. Maecenas vel leo vel nulla pellentesque gravida gravida et lacus. Nulla at nibh a dolor placerat tincidunt non sit amet est. Duis eget lobortis tellus, non consequat ex.</p>
+
+  <p>Donec et ligula eu augue imperdiet imperdiet. Suspendisse tempus ornare velit, sit amet pharetra sapien volutpat in. Maecenas rutrum nec ante at rutrum. Nullam malesuada dui mauris, venenatis iaculis nibh venenatis vel. Ut sit amet lorem varius, faucibus sapien a, ullamcorper leo. Donec sagittis mi ut fermentum pharetra. Proin vehicula cursus rutrum. Aliquam erat volutpat. Nullam imperdiet sem sed eleifend ultrices.</p>
+
+  <p>Fusce ultricies sapien ut ligula consectetur, in iaculis tortor dictum. In sed eleifend tellus. Vestibulum convallis turpis lacus, at porttitor lorem dapibus facilisis. Aenean dignissim varius arcu vitae malesuada. Nam suscipit et velit quis facilisis. In ut fringilla massa, egestas iaculis nunc. Suspendisse potenti. Quisque mattis ultricies eros eget facilisis. Maecenas maximus diam nulla, nec euismod leo fermentum eu. Praesent lectus ligula, dictum nec rhoncus sit amet, semper at metus. Nam dolor lacus, tristique ac gravida et, maximus a nibh. Nunc ultricies mi quis nisl vulputate tincidunt. Integer tempor consequat maximus.</p>
+</div>
