--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <header>
     <div>
-      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed">
+      <a href="index.html"><img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed"></a>
     </div>
 
     <div class="container-fluid">
@@ -32,6 +32,7 @@
         <li class="col-xs-3"></li>
       </ul>
     </nav>
+  </hr>
     </div>
 
   </header>
