--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
   <header>
     <div>
-      <img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed">
+      <a href="index.html"><img src="assets/images/lauren-rutherford.png" alt="Lauren Rutherford in fancy type" class="displayed"></a>
     </div>
 
     <div class="container-fluid">
