--- a/index.html
+++ b/index.html
@@ -67,5 +67,13 @@
 
   </div>
 
+<footer class="container-fluid center-block footer-icons">
+    <i class="fa fa-twitter-square fa-2x"></i>
+    <i class="fa fa-linkedin-square fa-2x"></i>
+    <i class="fa fa-instagram fa-2x"></i>
+    <i class="fa fa-pinterest-square fa-2x"></i>
+    <i class="fa fa-facebook-square fa-2x"></i>
+</footer>
+
 </body>
 </html>
