Added footer to each page

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
       </ul>
     </nav>
     </div>
+  </header>
 
     <div>
       <img src="assets/images/zion.jpg" alt="Lauren Rutherford in fancy type" class="displayed">
@@ -51,4 +52,20 @@
       <p>Pellentesque ac molestie est. Fusce leo diam, iaculis in mauris in, posuere vestibulum ipsum. Phasellus dictum, lectus ut mollis congue, diam augue facilisis nisl, in malesuada mauris nulla quis est. Integer sed placerat eros. Duis sem quam, suscipit quis egestas quis, efficitur id risus. Nullam non sodales felis. In nec gravida mi. Donec tincidunt lectus tortor, vitae feugiat est consequat quis. Aliquam porta, erat nec efficitur euismod, mi ipsum porta massa, ut ultrices lectus libero eget magna. Cras ultrices diam ut tellus dictum semper. Sed sollicitudin eleifend rutrum. Aliquam id est nec est hendrerit cursus vel sed est.</p>
     </div>
 
-  </header>
+  <div class="container-fluid center-block"
+  <footer>
+    <ul class="row footer-icons">
+      <li class="col-xs-2"></li>
+      <li class="col-xs-4">
+        <p id="copyright">&copy;2015 Lauren Rutherford</p>
+      </li>
+      <li class="col-xs-4">
+        <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
+        <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
+        <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+        <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
+      </li>
+      <li class="col-xs-2"></li>
+    </ul>
+  </footer>
+  </div>
