--- a/events.html
+++ b/events.html
@@ -53,3 +53,21 @@
 
   <p>Fusce ultricies sapien ut ligula consectetur, in iaculis tortor dictum. In sed eleifend tellus. Vestibulum convallis turpis lacus, at porttitor lorem dapibus facilisis. Aenean dignissim varius arcu vitae malesuada. Nam suscipit et velit quis facilisis. In ut fringilla massa, egestas iaculis nunc. Suspendisse potenti. Quisque mattis ultricies eros eget facilisis. Maecenas maximus diam nulla, nec euismod leo fermentum eu. Praesent lectus ligula, dictum nec rhoncus sit amet, semper at metus. Nam dolor lacus, tristique ac gravida et, maximus a nibh. Nunc ultricies mi quis nisl vulputate tincidunt. Integer tempor consequat maximus.</p>
 </div>
+
+<div class="container-fluid center-block"
+<footer>
+  <ul class="row footer-icons">
+    <li class="col-xs-2"></li>
+    <li class="col-xs-4">
+      <p id="copyright">&copy;2015 Lauren Rutherford</p>
+    </li>
+    <li class="col-xs-4">
+      <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
+      <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
+      <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+      <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
+    </li>
+    <li class="col-xs-2"></li>
+  </ul>
+</footer>
+</div>
