--- a/work.html
+++ b/work.html
@@ -347,3 +347,24 @@
           </div>
         </div>
     </div> /end digital div/
+
+    <div class="container-fluid center-block"
+    <footer>
+      <ul class="row footer-icons">
+        <li class="col-xs-2"></li>
+        <li class="col-xs-4">
+          <p id="copyright">&copy;2015 Lauren Rutherford</p>
+        </li>
+        <li class="col-xs-4">
+          <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
+          <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
+          <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+          <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
+        </li>
+        <li class="col-xs-2"></li>
+      </ul>
+    </footer>
+    </div>
+
+</body>
+</html>
