--- a/about.html
+++ b/about.html
@@ -40,10 +40,7 @@
       <img src="assets/images/zion.jpg" alt="Lauren Rutherford in fancy type" class="displayed">
     </div>
 
-    <div class="container-fluid center-block displayed">
-      <ul class="row">
-        <li class="col-xs-2"></li>
-        <li class="col-xs-8"></li>
+    <div class="container-fluid center-block about-body">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porttitor nisl vel euismod tempor. Pellentesque fermentum vestibulum ligula, in placerat eros vestibulum quis. Donec venenatis id augue vitae semper. Cras vel nibh pretium purus gravida fringilla. Morbi lobortis blandit risus at viverra. In non tortor ut arcu efficitur convallis. Donec eget lorem non massa commodo feugiat.</p>
 
           <p>Vestibulum rhoncus tellus at posuere egestas. Vestibulum fringilla, nibh vitae pretium imperdiet, felis magna pharetra neque, ac blandit augue sem at odio. Sed et mi tristique turpis congue aliquam eget sed arcu. Praesent lorem ex, elementum in vestibulum non, aliquet et ipsum. Etiam venenatis elementum urna ut tincidunt. Sed metus enim, tempor nec dolor nec, dictum viverra lorem. Sed eget augue sapien. Maecenas vel leo vel nulla pellentesque gravida gravida et lacus. Nulla at nibh a dolor placerat tincidunt non sit amet est. Duis eget lobortis tellus, non consequat ex.</p>
@@ -53,11 +50,9 @@
           <p>Fusce ultricies sapien ut ligula consectetur, in iaculis tortor dictum. In sed eleifend tellus. Vestibulum convallis turpis lacus, at porttitor lorem dapibus facilisis. Aenean dignissim varius arcu vitae malesuada. Nam suscipit et velit quis facilisis. In ut fringilla massa, egestas iaculis nunc. Suspendisse potenti. Quisque mattis ultricies eros eget facilisis. Maecenas maximus diam nulla, nec euismod leo fermentum eu. Praesent lectus ligula, dictum nec rhoncus sit amet, semper at metus. Nam dolor lacus, tristique ac gravida et, maximus a nibh. Nunc ultricies mi quis nisl vulputate tincidunt. Integer tempor consequat maximus.</p>
 
           <p>Pellentesque ac molestie est. Fusce leo diam, iaculis in mauris in, posuere vestibulum ipsum. Phasellus dictum, lectus ut mollis congue, diam augue facilisis nisl, in malesuada mauris nulla quis est. Integer sed placerat eros. Duis sem quam, suscipit quis egestas quis, efficitur id risus. Nullam non sodales felis. In nec gravida mi. Donec tincidunt lectus tortor, vitae feugiat est consequat quis. Aliquam porta, erat nec efficitur euismod, mi ipsum porta massa, ut ultrices lectus libero eget magna. Cras ultrices diam ut tellus dictum semper. Sed sollicitudin eleifend rutrum. Aliquam id est nec est hendrerit cursus vel sed est.</p>
-        <li class="col-xs-2"></li>
-      </ul>
     </div>
 
-  <div class="container-fluid center-block"
+  <div class="container-fluid center-block">
   <footer>
     <ul class="row footer-icons">
       <li class="col-xs-2"></li>
